--- a/package.json
+++ b/package.json
@@ -4,22 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "yarn run rm:dist && run-p build:client build:server",
+    "build:server": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "build:client": "cross-env NODE_ENV=production webpack --config webpack.client.config.js",
     "deploy": "yarn build && clasp push",
-    "watch": "watch 'yarn run deploy' ./src"
+    "rm:dist": "rimraf dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/google-apps-script": "^1.0.14",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
+    "copy-webpack-plugin": "^6.0.3",
+    "cross-env": "^7.0.2",
     "gas-webpack-plugin": "^1.0.4",
+    "html-webpack-inline-source-plugin": "1.0.0-beta.2",
+    "html-webpack-plugin": "^4.3.0",
+    "rimraf": "^3.0.2",
     "ts-loader": "^8.0.2",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@google/clasp": "^2.3.0"
+    "@google/clasp": "^2.3.0",
+    "npm-run-all": "^4.1.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
