--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["es2019"],
+    "lib": ["esnext", "DOM"],
     "outDir": "./dist",
     "rootDir": "./src",
+    "jsx": "react",
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "experimentalDecorators": true
   },
+  "exclude": ["node_modules"],
   "include": ["./src/**/*"]
 }
