--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "yarn run rm:dist && run-p build:client build:server",
     "build:server": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "build:client": "cross-env NODE_ENV=production webpack --config webpack.client.config.js",
-    "deploy": "yarn build && clasp push",
+    "deploy": "yarn run rm:dist && yarn build:client && clasp push",
     "rm:dist": "rimraf dist",
     "open": "clasp open"
   },
