--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
     "copy-webpack-plugin": "^6.0.3",
-    "cross-env": "^7.0.2",
     "gas-webpack-plugin": "^1.0.4",
     "html-webpack-inline-source-plugin": "1.0.0-beta.2",
     "html-webpack-plugin": "^4.3.0",
@@ -27,8 +26,7 @@
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@google/clasp": "^2.3.0",
